deepin-mutter: bump version to 3.14.4
Switch Build-Depends from the transitional
libsystemd-login-dev to libsystemd-dev.

Change-Id: If4d8950c16576f8de7564573b5484073280bc47d

--- a/debian/deepin-mutter/debian/changelog
+++ b/debian/deepin-mutter/debian/changelog
@@ -1,3 +1,11 @@
+deepin-mutter (3.14.4-1) unstable; urgency=medium
+
+  * New upstream release.
+  * Switch Build-Depends from the transitional libsystemd-login-dev to
+    libsystemd-dev. (Closes: #779761)
+
+ -- Xu Fasheng <fasheng.xu@gmail.com>  Wed, 27 May 2015 14:00:08 +0800
+
 deepin-mutter (3.14.3-1deepin1) unstable; urgency=medium
 
   * New upstream release.
