--- a/dae/debian/changelog
+++ b/dae/debian/changelog
@@ -1,3 +1,9 @@
+dae (1.0.0-1) stable; urgency=low
+
+  * Autobuild Tag 1.0.0-1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 01 Jul 2015 09:15:19 +0000
+
 dae (1.0.0+20150228174134~a6758edb75) trusty; urgency=medium
 
   * Build from git a6758edb7550efd60994d8710785fc2c87e55e23
