--- a/dbus-factory/debian/changelog
+++ b/dbus-factory/debian/changelog
@@ -1,3 +1,15 @@
+dbus-factory (2.90.0-1) stable; urgency=low
+
+  * Autobuild Tag 2.90.0 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 01 Jul 2015 15:44:59 +0000
+
+dbus-factory (2014.2-1) stable; urgency=low
+
+  * Autobuild Tag 2014.2-1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Tue, 30 Jun 2015 09:00:18 +0000
+
 dbus-factory (0.0.0) unstable; urgency=medium
 
   * Unstable release.
