--- a/dde-control-center/debian/changelog
+++ b/dde-control-center/debian/changelog
@@ -1,3 +1,15 @@
+dde-control-center (2.90.1-1) stable; urgency=low
+
+  * Autobuild Tag 2.90.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Thu, 02 Jul 2015 11:08:27 +0000
+
+dde-control-center (2.90.0-1) stable; urgency=low
+
+  * Autobuild Tag 2.90.0-1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 01 Jul 2015 13:37:26 +0000
+
 dde-control-center (0.0.0) unstable; urgency=medium
 
   * Unstable release.
