--- a/dde-daemon/debian/changelog
+++ b/dde-daemon/debian/changelog
@@ -1,3 +1,21 @@
+dde-daemon (2.92.1-1) stable; urgency=low
+
+  * Autobuild Tag 2.92.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 24 Jul 2015 08:27:28 +0000
+
+dde-daemon (2.91.0-1) stable; urgency=low
+
+  * Autobuild Tag 2.91.0 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Thu, 02 Jul 2015 16:25:32 +0000
+
+dde-daemon (2.90.0-1) stable; urgency=low
+
+  * Autobuild Tag 2.90.0-1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 01 Jul 2015 13:39:03 +0000
+
 dde-daemon (0.0.1+20140805003158~60da01a153) trusty; urgency=low
 
   * Build from git 60da01a153a4f3e6f75a2819893b9112a368c451
