--- a/dde-dock-applets/debian/changelog
+++ b/dde-dock-applets/debian/changelog
@@ -1,3 +1,15 @@
+dde-dock-applets (2.90.1-1) stable; urgency=low
+
+  * Autobuild Tag 2.90.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 03 Jul 2015 16:07:47 +0000
+
+dde-dock-applets (2.90.0-1) stable; urgency=low
+
+  * Autobuild Tag 2.90.0-1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 01 Jul 2015 09:16:14 +0000
+
 dde-dock-applets (0.0.0) unstable; urgency=medium
 
   * Unstable release.
