--- a/deepin-boot-maker/debian/changelog
+++ b/deepin-boot-maker/debian/changelog
@@ -1,3 +1,15 @@
+deepin-boot-maker (1.0.0-1) stable; urgency=low
+
+  * Autobuild Tag 1.0.0 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 01 Jul 2015 14:32:30 +0000
+
+deepin-boot-maker (2014.2.1-1) stable; urgency=low
+
+  * Autobuild Tag 2014.2.1-1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 01 Jul 2015 09:27:39 +0000
+
 deepin-boot-maker (0.99) trusty; urgency=low
 
   * Upstreamer update
