--- a/deepin-default-gsettings/debian/changelog
+++ b/deepin-default-gsettings/debian/changelog
@@ -1,3 +1,9 @@
+deepin-default-gsettings (2015.0-1) stable; urgency=low
+
+  * Autobuild Tag 2015.0-1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Mon, 29 Jun 2015 20:22:53 +0000
+
 deepin-default-gsettings (0.0.0) unstable; urgency=medium
 
   * Unstable release.
