--- a/deepin-download-service/debian/changelog
+++ b/deepin-download-service/debian/changelog
@@ -1,3 +1,15 @@
+deepin-download-service (1.0.0-1) stable; urgency=low
+
+  * Autobuild Tag 1.0.0 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 01 Jul 2015 14:37:50 +0000
+
+deepin-download-service (2014.2-1) stable; urgency=low
+
+  * Autobuild Tag 2014.2-1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 01 Jul 2015 13:43:56 +0000
+
 deepin-download-service (0.0.0) unstable; urgency=medium
 
   * Unstable release.
