--- a/deepin-feedback/debian/changelog
+++ b/deepin-feedback/debian/changelog
@@ -1,3 +1,21 @@
+deepin-feedback (0.9.2-1) stable; urgency=low
+
+  * Autobuild Tag 0.9.2 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 10 Jul 2015 11:02:35 +0000
+
+deepin-feedback (0.9.1-1) stable; urgency=low
+
+  * Autobuild Tag 0.9.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 03 Jul 2015 11:08:55 +0000
+
+deepin-feedback (0.9.0-1) stable; urgency=low
+
+  * Autobuild Tag 0.9.0-1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 01 Jul 2015 13:44:47 +0000
+
 deepin-feedback (0.1) trusty; urgency=low
 
   * Initial Release.
