--- a/deepin-gettext-tools/debian/changelog
+++ b/deepin-gettext-tools/debian/changelog
@@ -1,3 +1,9 @@
+deepin-gettext-tools (1.0.0-1) stable; urgency=low
+
+  * Autobuild Tag 1.0.0-1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 01 Jul 2015 08:11:33 +0000
+
 deepin-gettext-tools (0.0.0) unstable; urgency=low
 
   * Unstable release.
