--- a/deepin-installer/debian/changelog
+++ b/deepin-installer/debian/changelog
@@ -1,3 +1,21 @@
+deepin-installer (1.3.2-1) stable; urgency=low
+
+  * Autobuild Tag 1.3.2 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Tue, 28 Jul 2015 17:25:06 +0000
+
+deepin-installer (1.2.10-1) unstable; urgency=low
+
+  * Autobuild Tag 1.2.10 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 03 Jul 2015 17:17:55 +0000
+
+deepin-installer (1.2.2-1) stable; urgency=low
+
+  * Autobuild Tag 1.2.2 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 01 Jul 2015 19:34:39 +0000
+
 deepin-installer (0.0.0) unstable; urgency=medium
 
   * Unstable release.
