--- a/deepin-manual/debian/changelog
+++ b/deepin-manual/debian/changelog
@@ -1,3 +1,9 @@
+deepin-manual (1.0.0-1) stable; urgency=low
+
+  * Autobuild Tag 1.0.0 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 01 Jul 2015 16:03:59 +0000
+
 deepin-manual (0.1) trusty; urgency=medium
 
   * build from git. 
