--- a/deepin-menu/debian/changelog
+++ b/deepin-menu/debian/changelog
@@ -1,3 +1,9 @@
+deepin-menu (2.3.0-1) stable; urgency=low
+
+  * Autobuild Tag 2.3.0-1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 01 Jul 2015 09:32:07 +0000
+
 deepin-menu (0.0.0) unstable; urgency=medium
 
   * Unstable release.
