--- a/deepin-movie/debian/changelog
+++ b/deepin-movie/debian/changelog
@@ -1,3 +1,15 @@
+deepin-movie (2.2.2-1) stable; urgency=low
+
+  * Autobuild Tag 2.2.2-1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 01 Jul 2015 14:21:25 +0000
+
+deepin-movie (2014.2.3-1) stable; urgency=low
+
+  * Autobuild Tag 2014.2.3-1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 01 Jul 2015 13:47:29 +0000
+
 deepin-movie (0.0.0) unstable; urgency=medium
 
   * Unstable release.
