--- a/deepin-mutter/debian/changelog
+++ b/deepin-mutter/debian/changelog
@@ -1,3 +1,9 @@
+deepin-mutter (3.14.4.0-1) stable; urgency=low
+
+  * Autobuild Tag 3.14.4.0 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 01 Jul 2015 15:13:08 +0000
+
 deepin-mutter (3.14.4-1) unstable; urgency=medium
 
   * New upstream release.
