--- a/deepin-screenshot/debian/changelog
+++ b/deepin-screenshot/debian/changelog
@@ -1,3 +1,39 @@
+deepin-screenshot (3.1.1-1) stable; urgency=low
+
+  * Autobuild Tag 3.1.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Mon, 20 Jul 2015 14:10:19 +0000
+
+deepin-screenshot (3.1.0-1) stable; urgency=low
+
+  * Autobuild Tag 3.1.0 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 10 Jul 2015 18:13:52 +0000
+
+deepin-screenshot (3.0.2-1) stable; urgency=low
+
+  * Autobuild Tag 3.0.2 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 03 Jul 2015 17:29:40 +0000
+
+deepin-screenshot (3.0.1-1) stable; urgency=low
+
+  * Autobuild Tag 3.0.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 03 Jul 2015 11:14:12 +0000
+
+deepin-screenshot (3.1.0-1) stable; urgency=low
+
+  * Autobuild Tag 3.1.0 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 01 Jul 2015 19:35:33 +0000
+
+deepin-screenshot (3.1.0-1) stable; urgency=low
+
+  * Autobuild Tag 3.1.0-1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Mon, 29 Jun 2015 09:13:36 +0000
+
 deepin-screenshot (3.0+20150508154858~a5ed48140f) trusty; urgency=medium
 
   [ 宋文武 ]
