--- a/deepin-social-sharing/debian/changelog
+++ b/deepin-social-sharing/debian/changelog
@@ -1,3 +1,15 @@
+deepin-social-sharing (1.1-1) stable; urgency=low
+
+  * Autobuild Tag 1.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Mon, 20 Jul 2015 14:15:00 +0000
+
+deepin-social-sharing (1.0.90-1) unstable; urgency=low
+
+  * Autobuild Tag 1.0.90 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 01 Jul 2015 19:41:29 +0000
+
 deepin-social-sharing (0.0.0) unstable; urgency=medium
 
   * Initial release.
