--- a/deepin-store/debian/changelog
+++ b/deepin-store/debian/changelog
@@ -1,3 +1,9 @@
+deepin-store (3.0.60-1) unstable; urgency=low
+
+  * Autobuild Tag 3.0.60 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 10 Jul 2015 15:52:43 +0000
+
 deepin-store (0.0.0) unstable; urgency=medium
 
   * Unstable release.
