--- a/deepin-terminal/debian/changelog
+++ b/deepin-terminal/debian/changelog
@@ -1,3 +1,9 @@
+deepin-terminal (1.1.0-1) stable; urgency=low
+
+  * Autobuild Tag 1.1.0-1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Tue, 30 Jun 2015 11:02:46 +0000
+
 deepin-terminal (0.0.0) unstable; urgency=medium
 
   * Unstable release.
