--- a/deepin-wm/debian/changelog
+++ b/deepin-wm/debian/changelog
@@ -1,3 +1,15 @@
+deepin-wm (0.2.1-1) stable; urgency=low
+
+  * Autobuild Tag 0.2.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 03 Jul 2015 10:13:18 +0000
+
+deepin-wm (0.2.0-1) stable; urgency=low
+
+  * Autobuild Tag 0.2.0 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 01 Jul 2015 16:05:13 +0000
+
 deepin-wm (0.2.0) trusty; urgency=medium
 
   * Update from upstream.
