--- a/dbus-factory/debian/changelog
+++ b/dbus-factory/debian/changelog
@@ -1,3 +1,15 @@
+dbus-factory (2.91.0-2) unstable; urgency=medium
+
+  * add debug packages. 
+
+ -- Deepin Packages Builder <packages@linuxdeepin.com>  Thu, 06 Aug 2015 14:12:36 +0800
+
+dbus-factory (2.91.0-1) stable; urgency=low
+
+  * Autobuild Tag 2.91.0 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Thu, 06 Aug 2015 09:38:48 +0000
+
 dbus-factory (2.90.0-1) stable; urgency=low
 
   * Autobuild Tag 2.90.0 
