--- a/dde-dock-applets/debian/changelog
+++ b/dde-dock-applets/debian/changelog
@@ -1,3 +1,9 @@
+dde-dock-applets (2.90.1-2) unstable; urgency=medium
+
+  * add debugging symbols. 
+
+ -- Deepin Packages Builder <packages@linuxdeepin.com>  Thu, 06 Aug 2015 16:01:51 +0800
+
 dde-dock-applets (2.90.1-1) stable; urgency=low
 
   * Autobuild Tag 2.90.1 
