--- a/go-dbus-generator/debian/changelog
+++ b/go-dbus-generator/debian/changelog
@@ -1,3 +1,15 @@
+go-dbus-generator (0.6.1-1) stable; urgency=low
+
+  * Autobuild Tag 0.6.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Thu, 06 Aug 2015 09:23:26 +0000
+
+go-dbus-generator (0.6.1-1) stable; urgency=low
+
+  * Autobuild Tag 0.6.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Thu, 06 Aug 2015 09:04:09 +0000
+
 go-dbus-generator (0.6.0-1) stable; urgency=low
 
   * Autobuild Tag 0.6.0-1 
