--- a/dde-control-center/debian/changelog
+++ b/dde-control-center/debian/changelog
@@ -1,14 +1,15 @@
-dde-control-center (2.90.1-1) stable; urgency=low
+dde-control-center (2.90.1+r1494~g999cab5) experimental; urgency=low
 
-  * Autobuild Tag 2.90.1 
+  ** Build revision: 999cab57c67c88f9a9065963c61c0cd262897918  @  origin/release/2.3 **
 
- -- TagBuilder <tabbuilder@linuxdeepin.com>  Thu, 02 Jul 2015 11:08:27 +0000
+  [upstreamer]
+  * Use DPalette to replace DConstants
+  * Hide remoting module for 2015 test
+  * Show error message when failed to connect to remote peer
+  * Fixed: show error page on peerIdFailed
+  * Merge branch 'develop' into release/2.3
 
-dde-control-center (2.90.0-1) stable; urgency=low
-
-  * Autobuild Tag 2.90.0-1 
-
- -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 01 Jul 2015 13:37:26 +0000
+ -- None <None>  Thu, 02 Jul 2015 13:55:11 +0000
 
 dde-control-center (0.0.0) unstable; urgency=medium
 
