--- a/README
+++ b/README
@@ -1,12 +1,14 @@
+下列示例为 branch.json 默认配置
+
+```
 {
-    "repo": "http://10.0.0.12/deepin-2015",
-    "default": "develop", #默认打包分支
-    "base_version": "15.06", #默认版本前缀
     "packages": [
 	{
 	    "pkg": "deepin-wm",
 	    "git": "ssh://jenkins@cr.deepin.io:29418/deepin-wm",
-	    "branch": "develop"
+	    "branch": "develop",
+	    "version": "0.0"
 	},
     ]
 }
+```
