--- a/deepin-mutter/debian/changelog
+++ b/deepin-mutter/debian/changelog
@@ -1,6 +1,12 @@
+deepin-mutter (3.16.3.0-1) stable; urgency=medium
+
+  * New upstream release.
+
+ -- Xu Fasheng <fasheng.xu@gmail.com>  Tue, 29 Sep 2015 19:53:36 +0800
+
 deepin-mutter (3.14.4.0-1) stable; urgency=low
 
-  * Autobuild Tag 3.14.4.0 
+  * Autobuild Tag 3.14.4.0
 
  -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 01 Jul 2015 15:13:08 +0000
 
