--- a/deepin-gtk-theme/debian/install
+++ b/deepin-gtk-theme/debian/install
@@ -1,3 +1,3 @@
 #Deepin-Legacy/* /usr/share/themes/Deepin-Legacy
 Deepin/* /usr/share/themes/Deepin
-Deepin-light/* /usr/share/themes/Deepin-light
+#Deepin-light/* /usr/share/themes/Deepin-light
