update deepin-mutter to 3.18.1.0
Change-Id: I1d3ff79dd08a95ea9c96d1c6e1b5fb98635a1f03

--- a/deepin-mutter/debian/changelog
+++ b/deepin-mutter/debian/changelog
@@ -1,3 +1,9 @@
+deepin-mutter (3.18.1.0-1) stable; urgency=medium
+
+  * New upstream release.
+
+ -- Xu Fasheng <fasheng.xu@gmail.com>  Mon, 9 Nov 2015 20:00:31 +0800
+
 deepin-mutter (3.16.3.0-1) stable; urgency=medium
 
   * New upstream release.
