--- a/dbus-factory/debian/changelog
+++ b/dbus-factory/debian/changelog
@@ -1,3 +1,9 @@
+dbus-factory (2.92.1-1) stable; urgency=low
+
+  * Autobuild Tag 2.92.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 20 Nov 2015 09:08:06 +0000
+
 dbus-factory (2.91.0-2) unstable; urgency=medium
 
   * add debug packages. 
