--- a/dde-launcher/debian/changelog
+++ b/dde-launcher/debian/changelog
@@ -1,3 +1,9 @@
+dde-launcher (2.90.1-1) stable; urgency=low
+
+  * Autobuild Tag 2.90.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 20 Nov 2015 09:46:37 +0000
+
 dde-launcher (0.0~git20150824-1) unstable; urgency=low
 
   * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
