--- a/deepin-boot-maker/debian/changelog
+++ b/deepin-boot-maker/debian/changelog
@@ -1,3 +1,9 @@
+deepin-boot-maker (1.1.1-1) stable; urgency=low
+
+  * Autobuild Tag 1.1.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Thu, 19 Nov 2015 15:24:48 +0000
+
 deepin-boot-maker (1.0.0-1) stable; urgency=low
 
   * Autobuild Tag 1.0.0 
