--- a/deepin-feedback/debian/changelog
+++ b/deepin-feedback/debian/changelog
@@ -1,3 +1,9 @@
+deepin-feedback (0.9.3-1) stable; urgency=low
+
+  * Autobuild Tag 0.9.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 20 Nov 2015 09:50:04 +0000
+
 deepin-feedback (0.9.2-1) stable; urgency=low
 
   * Autobuild Tag 0.9.2 
