--- a/deepin-file-manager/debian/changelog
+++ b/deepin-file-manager/debian/changelog
@@ -1,3 +1,9 @@
+deepin-file-manager (0.1.1-1) stable; urgency=low
+
+  * Autobuild Tag 0.1.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 20 Nov 2015 09:44:30 +0000
+
 deepin-file-manager (0.0.0+r0) unstable; urgency=low
 
   * Autobuild Tag 2.90.0-1 
