--- a/deepin-menu/debian/changelog
+++ b/deepin-menu/debian/changelog
@@ -1,3 +1,15 @@
+deepin-menu (2.90.1-2) stable; urgency=low
+
+  * Rebuild Version 2.90.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 20 Nov 2015 09:50:48 +0000
+
+deepin-menu (2.90.1-1) stable; urgency=low
+
+  * Autobuild Tag 2.90.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 20 Nov 2015 09:50:26 +0000
+
 deepin-menu (2.3.0-1) stable; urgency=low
 
   * Autobuild Tag 2.3.0-1 
