--- a/deepin-metacity/debian/changelog
+++ b/deepin-metacity/debian/changelog
@@ -1,3 +1,15 @@
+deepin-metacity (3.18.1.1-2) stable; urgency=low
+
+  * Rebuild Version 3.18.1.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 20 Nov 2015 09:19:14 +0000
+
+deepin-metacity (3.18.1.1-1) stable; urgency=low
+
+  * Autobuild Tag 3.18.1.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 20 Nov 2015 09:18:49 +0000
+
 deepin-metacity (1:3.17.2-4) unstable; urgency=medium
 
   * rename metacity to deepin-metacity 
