--- a/deepin-wm/debian/changelog
+++ b/deepin-wm/debian/changelog
@@ -1,3 +1,9 @@
+deepin-wm (0.91.3-1) stable; urgency=low
+
+  * Autobuild Tag 0.91.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 20 Nov 2015 09:39:26 +0000
+
 deepin-wm (0.2.1-1) stable; urgency=low
 
   * Autobuild Tag 0.2.1 
