--- a/go-dlib/debian/changelog
+++ b/go-dlib/debian/changelog
@@ -1,3 +1,15 @@
+go-dlib (0.4.2-1) stable; urgency=low
+
+  * Autobuild Tag 0.4.2 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 20 Nov 2015 08:52:33 +0000
+
+go-dlib (0.4.1-2) stable; urgency=low
+
+  * Rebuild Version 0.4.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 20 Nov 2015 08:30:12 +0000
+
 go-dlib (0.4.1-1) stable; urgency=low
 
   * Autobuild Tag 0.4.1 
