--- a/libdui/debian/changelog
+++ b/libdui/debian/changelog
@@ -1,3 +1,9 @@
+libdui (1.2.1-1) stable; urgency=low
+
+  * Autobuild Tag 1.2.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Thu, 19 Nov 2015 20:13:20 +0000
+
 libdui (1.0-1) unstable; urgency=low
 
   * Initial release 
