--- a/dbus-factory/debian/changelog
+++ b/dbus-factory/debian/changelog
@@ -1,3 +1,9 @@
+dbus-factory (2.92.1-2) stable; urgency=low
+
+  * Rebuild Version 2.92.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Mon, 23 Nov 2015 09:55:18 +0000
+
 dbus-factory (2.92.1-1) stable; urgency=low
 
   * Autobuild Tag 2.92.1 
