--- a/dde-control-center/debian/changelog
+++ b/dde-control-center/debian/changelog
@@ -1,3 +1,9 @@
+dde-control-center (2.91.2-1) stable; urgency=low
+
+  * Autobuild Tag 2.91.2 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 20 Nov 2015 17:02:56 +0000
+
 dde-control-center (2.91.1-1) stable; urgency=low
 
   * Autobuild Tag 2.91.1 
