--- a/dde-daemon/debian/changelog
+++ b/dde-daemon/debian/changelog
@@ -1,3 +1,9 @@
+dde-daemon (2.93.1-2) stable; urgency=low
+
+  * Rebuild Version 2.93.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Mon, 23 Nov 2015 10:22:03 +0000
+
 dde-daemon (2.93.1-1) stable; urgency=low
 
   * Autobuild Tag 2.93.1 
