--- a/deepin-appstore/debian/changelog
+++ b/deepin-appstore/debian/changelog
@@ -1,3 +1,9 @@
+deepin-appstore (3.9.2-1) stable; urgency=low
+
+  * Autobuild Tag 3.9.2 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Mon, 23 Nov 2015 11:41:55 +0000
+
 deepin-appstore (0.0.1) 2015; urgency=low
 
   * XXXXXXXXX
