--- a/deepin-installer/debian/changelog
+++ b/deepin-installer/debian/changelog
@@ -1,3 +1,15 @@
+deepin-installer (1.3.12-1) unstable; urgency=low
+
+  * Autobuild Tag 1.3.12 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Mon, 23 Nov 2015 16:53:41 +0000
+
+deepin-installer (1.3.11-1) unstable; urgency=low
+
+  * Autobuild Tag 1.3.11 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 20 Nov 2015 17:08:03 +0000
+
 deepin-installer (1.3.10-1) unstable; urgency=low
 
   * Autobuild Tag 1.3.10 
