--- a/go-dbus-generator/debian/changelog
+++ b/go-dbus-generator/debian/changelog
@@ -1,3 +1,9 @@
+go-dbus-generator (0.6.3-1) stable; urgency=low
+
+  * Autobuild Tag 0.6.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Mon, 23 Nov 2015 09:34:50 +0000
+
 go-dbus-generator (0.6.2-1) stable; urgency=low
 
   * Autobuild Tag 0.6.2 
