--- a/lastore-daemon/debian/changelog
+++ b/lastore-daemon/debian/changelog
@@ -1,3 +1,15 @@
+lastore-daemon (0.8.6-1) stable; urgency=low
+
+  * Autobuild Tag 0.8.6 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Mon, 23 Nov 2015 10:43:04 +0000
+
+lastore-daemon (0.8.5-1) stable; urgency=low
+
+  * Autobuild Tag 0.8.5 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Mon, 23 Nov 2015 08:46:21 +0000
+
 lastore-daemon (0.1) UNRELEASED; urgency=medium
 
   * package lastore-daemon
