--- a/startdde/debian/changelog
+++ b/startdde/debian/changelog
@@ -1,3 +1,9 @@
+startdde (2.92.1-2) stable; urgency=low
+
+  * Rebuild Version 2.92.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Mon, 23 Nov 2015 10:22:23 +0000
+
 startdde (2.92.1-1) stable; urgency=low
 
   * Autobuild Tag 2.92.1 
