add archive.conf README
Change-Id: Ifb58dc387537f849f2536b1692bbb20d77e9e258

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-下列示例为 branch.json 默认配置
+-- 下列示例为 branch.json 默认配置
 
 ```
 {
@@ -12,3 +12,8 @@
     ]
 }
 ```
+
+-- archive.conf
+软件生成Tag会使用该配置文件
+
+
