add deepin-15 gtk theme
Change-Id: I3e9d83c7a2bcde82c2e15180149b32dfa9181bc3

--- a/deepin-gtk-theme/debian/install
+++ b/deepin-gtk-theme/debian/install
@@ -1,3 +1,4 @@
 #Deepin-Legacy/* /usr/share/themes/Deepin-Legacy
 Deepin/* /usr/share/themes/Deepin
+deepin-15/* /usr/share/themes/deepin-15
 #Deepin-light/* /usr/share/themes/Deepin-light
