--- a/dde-desktop/debian/changelog
+++ b/dde-desktop/debian/changelog
@@ -1,3 +1,15 @@
+dde-desktop (2.90.4-1) stable; urgency=low
+
+  * Autobuild Tag 2.90.4 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Sat, 19 Dec 2015 15:59:01 +0000
+
+dde-desktop (2.90.3-1) stable; urgency=low
+
+  * Autobuild Tag 2.90.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 22:04:54 +0000
+
 dde-desktop (2.90.2-1) stable; urgency=low
 
   * Autobuild Tag 2.90.2 
