--- a/deepin-manual/debian/changelog
+++ b/deepin-manual/debian/changelog
@@ -1,3 +1,9 @@
+deepin-manual (1.0.3-1) stable; urgency=low
+
+  * Autobuild Tag 1.0.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Sat, 19 Dec 2015 13:04:17 +0000
+
 deepin-manual (1.0.2-1) stable; urgency=low
 
   * Autobuild Tag 1.0.2 
