--- a/dbus-factory/debian/changelog
+++ b/dbus-factory/debian/changelog
@@ -1,3 +1,21 @@
+dbus-factory (2.92.3-1) stable; urgency=low
+
+  * Autobuild Tag 2.92.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Sat, 19 Dec 2015 12:42:36 +0000
+
+dbus-factory (2.92.2-2) stable; urgency=low
+
+  * Rebuild Version 2.92.2 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 21:42:53 +0000
+
+dbus-factory (2.92.2-1) stable; urgency=low
+
+  * Autobuild Tag 2.92.2 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 21:36:11 +0000
+
 dbus-factory (2.92.1-2) stable; urgency=low
 
   * Rebuild Version 2.92.1 
