--- a/dde-api/debian/changelog
+++ b/dde-api/debian/changelog
@@ -1,3 +1,57 @@
+dde-api (2.92.4-3) stable; urgency=low
+
+  * Rebuild Version 2.92.4 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Sat, 19 Dec 2015 15:40:07 +0000
+
+dde-api (2.92.4-2) stable; urgency=low
+
+  * Rebuild Version 2.92.4 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Sat, 19 Dec 2015 15:06:24 +0000
+
+dde-api (2.92.4-1) stable; urgency=low
+
+  * Autobuild Tag 2.92.4 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Sat, 19 Dec 2015 12:41:55 +0000
+
+dde-api (2.92.3-2) stable; urgency=low
+
+  * Rebuild Version 2.92.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Thu, 10 Dec 2015 21:16:42 +0000
+
+dde-api (2.92.3-1) stable; urgency=low
+
+  * Autobuild Tag 2.92.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Thu, 10 Dec 2015 20:21:19 +0000
+
+dde-api (2.92.2-2) stable; urgency=low
+
+  * Rebuild Version 2.92.2 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 21:46:32 +0000
+
+dde-api (2.92.2-1) stable; urgency=low
+
+  * Autobuild Tag 2.92.2 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 21:35:52 +0000
+
+dde-api (2.92.1-4) stable; urgency=low
+
+  * Rebuild Version 2.92.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 07:19:10 +0000
+
+dde-api (2.92.1-3) stable; urgency=low
+
+  * Rebuild Version 2.92.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 07:12:50 +0000
+
 dde-api (2.92.1-2) stable; urgency=low
 
   * Rebuild Version 2.92.1 
