--- a/dde-control-center/debian/changelog
+++ b/dde-control-center/debian/changelog
@@ -1,3 +1,21 @@
+dde-control-center (2.91.5-1) stable; urgency=low
+
+  * Autobuild Tag 2.91.5 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Sat, 19 Dec 2015 15:58:24 +0000
+
+dde-control-center (2.91.4-1) stable; urgency=low
+
+  * Autobuild Tag 2.91.4 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Thu, 10 Dec 2015 20:33:06 +0000
+
+dde-control-center (2.91.3-1) stable; urgency=low
+
+  * Autobuild Tag 2.91.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 22:25:45 +0000
+
 dde-control-center (2.91.2-1) stable; urgency=low
 
   * Autobuild Tag 2.91.2 
