--- a/dde-daemon/debian/changelog
+++ b/dde-daemon/debian/changelog
@@ -1,3 +1,39 @@
+dde-daemon (2.93.5-2) stable; urgency=low
+
+  * Rebuild Version 2.93.5 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Sat, 19 Dec 2015 15:57:53 +0000
+
+dde-daemon (2.93.5-1) stable; urgency=low
+
+  * Autobuild Tag 2.93.5 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Sat, 19 Dec 2015 13:06:54 +0000
+
+dde-daemon (2.93.4-1) stable; urgency=low
+
+  * Autobuild Tag 2.93.4 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Thu, 10 Dec 2015 20:29:24 +0000
+
+dde-daemon (2.93.3-1) stable; urgency=low
+
+  * Autobuild Tag 2.93.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Thu, 10 Dec 2015 10:49:07 +0000
+
+dde-daemon (2.93.2-1) stable; urgency=low
+
+  * Autobuild Tag 2.93.2 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 21:54:19 +0000
+
+dde-daemon (2.93.1-3) stable; urgency=low
+
+  * Rebuild Version 2.93.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 07:24:25 +0000
+
 dde-daemon (2.93.1-2) stable; urgency=low
 
   * Rebuild Version 2.93.1 
