--- a/dde-dock/debian/changelog
+++ b/dde-dock/debian/changelog
@@ -1,3 +1,21 @@
+dde-dock (2.90.4-1) stable; urgency=low
+
+  * Autobuild Tag 2.90.4 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Sat, 19 Dec 2015 13:07:01 +0000
+
+dde-dock (2.90.3-1) stable; urgency=low
+
+  * Autobuild Tag 2.90.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Thu, 10 Dec 2015 20:40:49 +0000
+
+dde-dock (2.90.2-1) stable; urgency=low
+
+  * Autobuild Tag 2.90.2 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 22:04:43 +0000
+
 dde-dock (2.90.1-1) stable; urgency=low
 
   * Autobuild Tag 2.90.1 
