--- a/deepin-appstore/debian/changelog
+++ b/deepin-appstore/debian/changelog
@@ -1,3 +1,69 @@
+deepin-appstore (4.0-1) stable; urgency=low
+
+  * Autobuild Tag 4.0 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Tue, 15 Dec 2015 12:07:31 +0000
+
+deepin-appstore (3.9.6-1) stable; urgency=low
+
+  * Autobuild Tag 3.9.6 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 10:24:53 +0000
+
+deepin-appstore (3.9.5-3) stable; urgency=low
+
+  * Rebuild Version 3.9.5 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Mon, 07 Dec 2015 17:40:36 +0000
+
+deepin-appstore (3.9.5-2) stable; urgency=low
+
+  * Rebuild Version 3.9.5 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Mon, 07 Dec 2015 15:37:54 +0000
+
+deepin-appstore (3.9.5-1) stable; urgency=low
+
+  * Autobuild Tag 3.9.5 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Mon, 07 Dec 2015 15:01:36 +0000
+
+deepin-appstore (3.9.4-1) stable; urgency=low
+
+  * Autobuild Tag 3.9.4 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Thu, 26 Nov 2015 10:41:17 +0000
+
+deepin-appstore (3.9.3-5) stable; urgency=low
+
+  * Rebuild Version 3.9.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 25 Nov 2015 16:02:14 +0000
+
+deepin-appstore (3.9.3-4) stable; urgency=low
+
+  * Rebuild Version 3.9.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 25 Nov 2015 15:46:33 +0000
+
+deepin-appstore (3.9.3-3) stable; urgency=low
+
+  * Rebuild Version 3.9.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 25 Nov 2015 15:37:16 +0000
+
+deepin-appstore (3.9.3-2) stable; urgency=low
+
+  * Rebuild Version 3.9.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 25 Nov 2015 15:26:49 +0000
+
+deepin-appstore (3.9.3-1) stable; urgency=low
+
+  * Autobuild Tag 3.9.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Tue, 24 Nov 2015 13:51:37 +0000
+
 deepin-appstore (3.9.2-1) stable; urgency=low
 
   * Autobuild Tag 3.9.2 
