--- a/deepin-feedback/debian/changelog
+++ b/deepin-feedback/debian/changelog
@@ -1,3 +1,15 @@
+deepin-feedback (0.9.4-1) stable; urgency=low
+
+  * Autobuild Tag 0.9.4 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 22:06:43 +0000
+
+deepin-feedback (0.9.3-2) stable; urgency=low
+
+  * Rebuild Version 0.9.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 25 Nov 2015 17:04:43 +0000
+
 deepin-feedback (0.9.3-1) stable; urgency=low
 
   * Autobuild Tag 0.9.3 
