--- a/deepin-file-manager/debian/changelog
+++ b/deepin-file-manager/debian/changelog
@@ -1,3 +1,15 @@
+deepin-file-manager (0.1.4-1) stable; urgency=low
+
+  * Autobuild Tag 0.1.4 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Sat, 19 Dec 2015 16:39:29 +0000
+
+deepin-file-manager (0.1.2-1) stable; urgency=low
+
+  * Autobuild Tag 0.1.2 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 22:02:20 +0000
+
 deepin-file-manager (0.1.1-1) stable; urgency=low
 
   * Autobuild Tag 0.1.1 
