--- a/deepin-gtk-theme/debian/changelog
+++ b/deepin-gtk-theme/debian/changelog
@@ -1,3 +1,39 @@
+deepin-gtk-theme (15.12.2-1) stable; urgency=low
+
+  * Autobuild Tag 15.12.2 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Sat, 19 Dec 2015 13:05:27 +0000
+
+deepin-gtk-theme (15.12.1-1) stable; urgency=low
+
+  * Autobuild Tag 15.12.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Tue, 15 Dec 2015 17:35:32 +0000
+
+deepin-gtk-theme (15.06.3-2) stable; urgency=low
+
+  * Rebuild Version 15.06.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Tue, 15 Dec 2015 17:29:07 +0000
+
+deepin-gtk-theme (15.06.3-1) stable; urgency=low
+
+  * Autobuild Tag 15.06.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Tue, 15 Dec 2015 17:25:36 +0000
+
+deepin-gtk-theme (3.18.1-2) stable; urgency=low
+
+  * Rebuild Version 3.18.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Tue, 15 Dec 2015 14:15:06 +0000
+
+deepin-gtk-theme (3.18.1-1) stable; urgency=low
+
+  * Autobuild Tag 3.18.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Tue, 15 Dec 2015 14:13:58 +0000
+
 deepin-gtk-theme (0.0.0) unstable; urgency=medium
 
   * Unstable release.
