--- a/deepin-installer/debian/changelog
+++ b/deepin-installer/debian/changelog
@@ -1,3 +1,21 @@
+deepin-installer (1.3.15-1) unstable; urgency=low
+
+  * Autobuild Tag 1.3.15 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 16 Dec 2015 08:44:04 +0000
+
+deepin-installer (1.3.14-1) unstable; urgency=low
+
+  * Autobuild Tag 1.3.14 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Tue, 15 Dec 2015 20:53:41 +0000
+
+deepin-installer (1.3.13-1) unstable; urgency=low
+
+  * Autobuild Tag 1.3.13 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Mon, 14 Dec 2015 13:27:21 +0000
+
 deepin-installer (1.3.12-1) unstable; urgency=low
 
   * Autobuild Tag 1.3.12 
