--- a/deepin-menu/debian/changelog
+++ b/deepin-menu/debian/changelog
@@ -1,3 +1,9 @@
+deepin-menu (2.90.2-1) stable; urgency=low
+
+  * Autobuild Tag 2.90.2 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 22:06:30 +0000
+
 deepin-menu (2.90.1-2) stable; urgency=low
 
   * Rebuild Version 2.90.1 
