--- a/deepin-metacity/debian/changelog
+++ b/deepin-metacity/debian/changelog
@@ -1,3 +1,9 @@
+deepin-metacity (3.18.1.2-1) stable; urgency=low
+
+  * Autobuild Tag 3.18.1.2 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Sat, 19 Dec 2015 13:09:09 +0000
+
 deepin-metacity (3.18.1.1-2) stable; urgency=low
 
   * Rebuild Version 3.18.1.1 
