--- a/deepin-mutter/debian/changelog
+++ b/deepin-mutter/debian/changelog
@@ -1,3 +1,15 @@
+deepin-mutter (3.18.2.1-1) stable; urgency=low
+
+  * Autobuild Tag 3.18.2.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Sat, 19 Dec 2015 13:08:50 +0000
+
+deepin-mutter (3.18.1.4-1) stable; urgency=low
+
+  * Autobuild Tag 3.18.1.4 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 22:25:58 +0000
+
 deepin-mutter (3.18.1.2-1) stable; urgency=low
 
   * Autobuild Tag 3.18.1.2 
