--- a/deepin-notifications/debian/changelog
+++ b/deepin-notifications/debian/changelog
@@ -1,3 +1,15 @@
+deepin-notifications (2.3.5-1) stable; urgency=low
+
+  * Autobuild Tag 2.3.5 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Sat, 19 Dec 2015 13:09:19 +0000
+
+deepin-notifications (2.3.4-1) stable; urgency=low
+
+  * Autobuild Tag 2.3.4 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 22:06:06 +0000
+
 deepin-notifications (2.3.3-1) stable; urgency=low
 
   * Autobuild Tag 2.3.3 
