--- a/deepin-remote-assistance/debian/changelog
+++ b/deepin-remote-assistance/debian/changelog
@@ -1,3 +1,9 @@
+deepin-remote-assistance (1.0.2-1) stable; urgency=low
+
+  * Autobuild Tag 1.0.2 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 02 Dec 2015 10:22:45 +0000
+
 deepin-remote-assistance (1.0.0-1) stable; urgency=low
 
   * Autobuild Tag 1.0.0 
