--- a/go-dbus-generator/debian/changelog
+++ b/go-dbus-generator/debian/changelog
@@ -1,3 +1,9 @@
+go-dbus-generator (0.6.4-1) stable; urgency=low
+
+  * Autobuild Tag 0.6.4 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 21:31:40 +0000
+
 go-dbus-generator (0.6.3-1) stable; urgency=low
 
   * Autobuild Tag 0.6.3 
