--- a/go-dlib/debian/changelog
+++ b/go-dlib/debian/changelog
@@ -1,3 +1,27 @@
+go-dlib (0.4.4-2) stable; urgency=low
+
+  * Rebuild Version 0.4.4 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Sat, 19 Dec 2015 15:37:43 +0000
+
+go-dlib (0.4.4-1) stable; urgency=low
+
+  * Autobuild Tag 0.4.4 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Sat, 19 Dec 2015 13:56:01 +0000
+
+go-dlib (0.4.3-1) stable; urgency=low
+
+  * Autobuild Tag 0.4.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 21:44:16 +0000
+
+go-dlib (0.4.2-2) stable; urgency=low
+
+  * Rebuild Version 0.4.2 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 07:04:48 +0000
+
 go-dlib (0.4.2-1) stable; urgency=low
 
   * Autobuild Tag 0.4.2 
