--- a/go-gir-generator/debian/changelog
+++ b/go-gir-generator/debian/changelog
@@ -1,3 +1,15 @@
+go-gir-generator (0.9.1-1) stable; urgency=low
+
+  * Autobuild Tag 0.9.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 18 Dec 2015 17:50:47 +0000
+
+go-gir-generator (0.9.0-1) stable; urgency=low
+
+  * Autobuild Tag 0.9.0 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 18 Dec 2015 16:53:49 +0000
+
 go-gir-generator (0.0.1) unstable; urgency=low
 
   * Initial release 
