--- a/lastore-daemon/debian/changelog
+++ b/lastore-daemon/debian/changelog
@@ -1,3 +1,57 @@
+lastore-daemon (0.9.5-1) stable; urgency=low
+
+  * Autobuild Tag 0.9.5 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Fri, 18 Dec 2015 07:19:45 +0000
+
+lastore-daemon (0.9.4-1) stable; urgency=low
+
+  * Autobuild Tag 0.9.4 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Tue, 15 Dec 2015 17:24:28 +0000
+
+lastore-daemon (0.9.3-1) stable; urgency=low
+
+  * Autobuild Tag 0.9.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Tue, 15 Dec 2015 14:02:58 +0000
+
+lastore-daemon (0.9.2-1) stable; urgency=low
+
+  * Autobuild Tag 0.9.2 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Mon, 14 Dec 2015 16:02:09 +0000
+
+lastore-daemon (0.9.1-1) stable; urgency=low
+
+  * Autobuild Tag 0.9.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 23:10:54 +0000
+
+lastore-daemon (0.9.0-1) stable; urgency=low
+
+  * Autobuild Tag 0.9.0 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 09:12:31 +0000
+
+lastore-daemon (0.8.9-1) stable; urgency=low
+
+  * Autobuild Tag 0.8.9 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Mon, 07 Dec 2015 12:22:09 +0000
+
+lastore-daemon (0.8.8-1) stable; urgency=low
+
+  * Autobuild Tag 0.8.8 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 25 Nov 2015 11:12:57 +0000
+
+lastore-daemon (0.8.7-1) stable; urgency=low
+
+  * Autobuild Tag 0.8.7 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Tue, 24 Nov 2015 15:11:36 +0000
+
 lastore-daemon (0.8.6-1) stable; urgency=low
 
   * Autobuild Tag 0.8.6 
