--- a/libdui/debian/changelog
+++ b/libdui/debian/changelog
@@ -1,3 +1,21 @@
+libdui (1.2.4-1) stable; urgency=low
+
+  * Autobuild Tag 1.2.4 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Sat, 19 Dec 2015 16:00:15 +0000
+
+libdui (1.2.3-1) stable; urgency=low
+
+  * Autobuild Tag 1.2.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Thu, 10 Dec 2015 20:52:07 +0000
+
+libdui (1.2.2-1) stable; urgency=low
+
+  * Autobuild Tag 1.2.2 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 21:54:55 +0000
+
 libdui (1.2.1-1) stable; urgency=low
 
   * Autobuild Tag 1.2.1 
