--- a/startdde/debian/changelog
+++ b/startdde/debian/changelog
@@ -1,3 +1,21 @@
+startdde (2.92.3-1) stable; urgency=low
+
+  * Autobuild Tag 2.92.3 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Sat, 19 Dec 2015 15:58:30 +0000
+
+startdde (2.92.2-1) stable; urgency=low
+
+  * Autobuild Tag 2.92.2 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 21:53:28 +0000
+
+startdde (2.92.1-3) stable; urgency=low
+
+  * Rebuild Version 2.92.1 
+
+ -- TagBuilder <tabbuilder@linuxdeepin.com>  Wed, 09 Dec 2015 07:24:32 +0000
+
 startdde (2.92.1-2) stable; urgency=low
 
   * Rebuild Version 2.92.1 
