go-dlib: fix depends error.

--- a/dde-daemon/debian/changelog
+++ b/dde-daemon/debian/changelog
@@ -1,3 +1,9 @@
+dde-daemon (3.0.6-2) stable; urgency=low
+
+  * Rebuild Version 3.0.6 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 25 Jan 2016 16:59:54 +0000
+
 dde-daemon (3.0.6-1) stable; urgency=low
 
   * Autobuild Tag 3.0.6 
