--- a/go-dlib/debian/changelog
+++ b/go-dlib/debian/changelog
@@ -1,3 +1,15 @@
+go-dlib (0.4.6-3) stable; urgency=low
+
+  * Rebuild Version 0.4.6 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 25 Jan 2016 16:52:37 +0000
+
+go-dlib (0.4.6-2) stable; urgency=low
+
+  * Rebuild Version 0.4.6 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 25 Jan 2016 16:50:01 +0000
+
 go-dlib (0.4.6-1) stable; urgency=low
 
   * Autobuild Tag 0.4.6 
