--- a/deepin-wm/debian/changelog
+++ b/deepin-wm/debian/changelog
@@ -1,3 +1,15 @@
+deepin-wm (1.0.4-1) stable; urgency=low
+
+  * Autobuild Tag 1.0.4 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 25 Feb 2016 09:51:58 +0000
+
+deepin-wm (1.0.3-1) stable; urgency=low
+
+  * Autobuild Tag 1.0.3 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 22 Feb 2016 17:01:37 +0000
+
 deepin-wm (1.0.2-1) stable; urgency=low
 
   * Autobuild Tag 1.0.2 
