--- a/dbus-factory/debian/changelog
+++ b/dbus-factory/debian/changelog
@@ -1,3 +1,9 @@
+dbus-factory (3.0.2-1) stable; urgency=low
+
+  * Autobuild Tag 3.0.2 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 22 Feb 2016 16:23:06 +0000
+
 dbus-factory (3.0.1-1) stable; urgency=low
 
   * Autobuild Tag 3.0.1 
