--- a/dde-launcher/debian/changelog
+++ b/dde-launcher/debian/changelog
@@ -1,3 +1,15 @@
+dde-launcher (3.0.6-1) stable; urgency=low
+
+  * Autobuild Tag 3.0.6 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 25 Feb 2016 10:41:51 +0000
+
+dde-launcher (3.0.5-1) stable; urgency=low
+
+  * Autobuild Tag 3.0.5 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 22 Feb 2016 16:40:21 +0000
+
 dde-launcher (3.0.3-1) stable; urgency=low
 
   * Autobuild Tag 3.0.3 
