--- a/deepin-cloud-print/debian/changelog
+++ b/deepin-cloud-print/debian/changelog
@@ -1,3 +1,21 @@
+deepin-cloud-print (1.0.0-3) stable; urgency=low
+
+  * Rebuild Version 1.0.0 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Wed, 17 Feb 2016 15:40:12 +0000
+
+deepin-cloud-print (1.0.0-2) stable; urgency=low
+
+  * Rebuild Version 1.0.0 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Wed, 17 Feb 2016 14:56:42 +0000
+
+deepin-cloud-print (1.0.0-1) stable; urgency=low
+
+  * Autobuild Tag 1.0.0 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Wed, 17 Feb 2016 12:08:41 +0000
+
 deepin-cloud-print (1.1) unstable; urgency=low
 
   * First Debian release.
