--- a/deepin-desktop-base/debian/changelog
+++ b/deepin-desktop-base/debian/changelog
@@ -1,3 +1,9 @@
+deepin-desktop-base (2016.01.28-1) unstable; urgency=low
+
+  * Autobuild Tag 2016.01.28 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 28 Jan 2016 15:12:55 +0000
+
 deepin-desktop-base (2015.12.30-1) unstable; urgency=low
 
   * Autobuild Tag 2015.12.30 
