--- a/deepin-file-manager/debian/changelog
+++ b/deepin-file-manager/debian/changelog
@@ -1,3 +1,15 @@
+deepin-file-manager (0.1.10-1) unstable; urgency=low
+
+  * Autobuild Tag 0.1.10 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 22 Feb 2016 17:01:55 +0000
+
+deepin-file-manager (0.1.9-2) stable; urgency=low
+
+  * Rebuild Version 0.1.9 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 25 Jan 2016 17:50:10 +0000
+
 deepin-file-manager (0.1.9-1) stable; urgency=low
 
   * Autobuild Tag 0.1.9 
