--- a/deepin-icon-theme/debian/changelog
+++ b/deepin-icon-theme/debian/changelog
@@ -1,3 +1,9 @@
+deepin-icon-theme (15.12.26-1) unstable; urgency=low
+
+  * Autobuild Tag 15.12.26 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 22 Feb 2016 10:18:08 +0000
+
 deepin-icon-theme (15.12.25-1) unstable; urgency=low
 
   * Autobuild Tag 15.12.25 
