--- a/deepin-installer/debian/changelog
+++ b/deepin-installer/debian/changelog
@@ -1,3 +1,15 @@
+deepin-installer (1.3.23-1) unstable; urgency=low
+
+  * Autobuild Tag 1.3.23 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 28 Jan 2016 15:12:02 +0000
+
+deepin-installer (1.3.22-1) unstable; urgency=low
+
+  * Autobuild Tag 1.3.22 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Tue, 26 Jan 2016 11:00:13 +0000
+
 deepin-installer (1.3.20-1) unstable; urgency=low
 
   * Autobuild Tag 1.3.20 
