--- a/deepin-remote-assistance/debian/changelog
+++ b/deepin-remote-assistance/debian/changelog
@@ -1,3 +1,9 @@
+deepin-remote-assistance (1.0.3-1) stable; urgency=low
+
+  * Autobuild Tag 1.0.3 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 22 Feb 2016 10:23:26 +0000
+
 deepin-remote-assistance (1.0.2-1) stable; urgency=low
 
   * Autobuild Tag 1.0.2 
