--- a/deepin-terminal/debian/changelog
+++ b/deepin-terminal/debian/changelog
@@ -1,3 +1,9 @@
+deepin-terminal (1.1.4-1) stable; urgency=low
+
+  * Autobuild Tag 1.1.4 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 22 Feb 2016 10:19:40 +0000
+
 deepin-terminal (1.1.2-1) stable; urgency=low
 
   * Autobuild Tag 1.1.2 
