--- a/go-gir-generator/debian/changelog
+++ b/go-gir-generator/debian/changelog
@@ -1,3 +1,15 @@
+go-gir-generator (0.9.2-5) stable; urgency=low
+
+  * Rebuild Version 0.9.2 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 22 Feb 2016 09:20:37 +0000
+
+go-gir-generator (0.9.2-4) stable; urgency=low
+
+  * Rebuild Version 0.9.2 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 25 Jan 2016 17:16:12 +0000
+
 go-gir-generator (0.9.2-3) stable; urgency=low
 
   * Rebuild Version 0.9.2 
