--- a/libdui/debian/changelog
+++ b/libdui/debian/changelog
@@ -1,3 +1,9 @@
+libdui (1.2.10-1) unstable; urgency=low
+
+  * Autobuild Tag 1.2.10 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 22 Feb 2016 10:29:09 +0000
+
 libdui (1.2.9-1) stable; urgency=low
 
   * Autobuild Tag 1.2.9 
