--- a/startdde/debian/changelog
+++ b/startdde/debian/changelog
@@ -1,3 +1,9 @@
+startdde (3.0.3-2) stable; urgency=low
+
+  * Rebuild Version 3.0.3 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 25 Jan 2016 17:50:20 +0000
+
 startdde (3.0.3-1) stable; urgency=low
 
   * Autobuild Tag 3.0.3 
