--- a/deepin-license/debian/changelog
+++ b/deepin-license/debian/changelog
@@ -1,5 +1,5 @@
-deepin-license (1.0.0-1) unstable; urgency=medium
+deepin-license (1.0.2) unstable; urgency=low
 
-  * Initial release 
+  * First Debian release.
 
- -- Deepin Packages Builder <packages@linuxdeepin.com>  Thu, 14 Apr 2016 19:31:41 +0800
+ -- Iceyer Tsubasa <me@iceyer.net>  Wed, 06 Apr 2016 09:20:00 +0000
