--- a/deepin-file-manager-backend/debian/changelog
+++ b/deepin-file-manager-backend/debian/changelog
@@ -1,4 +1,4 @@
-deepin-file-manager (0.1.10-1) unstable; urgency=low
+deepin-file-manager-backend (0.1.10-1) unstable; urgency=low
 
   * Autobuild Tag 0.1.10 
 
