--- a/dde-control-center/debian/changelog
+++ b/dde-control-center/debian/changelog
@@ -1,3 +1,45 @@
+dde-control-center (3.0.10-7) unstable; urgency=low
+
+  * Rebuild Version 3.0.10 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 25 Apr 2016 11:20:16 +0000
+
+dde-control-center (3.0.10-6) unstable; urgency=low
+
+  * Rebuild Version 3.0.10 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 21 Apr 2016 16:16:22 +0000
+
+dde-control-center (3.0.10-5) unstable; urgency=low
+
+  * Rebuild Version 3.0.10 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Wed, 09 Mar 2016 15:25:09 +0000
+
+dde-control-center (3.0.10-4) unstable; urgency=low
+
+  * Rebuild Version 3.0.10 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Wed, 09 Mar 2016 12:33:35 +0000
+
+dde-control-center (3.0.10-3) unstable; urgency=low
+
+  * Rebuild Version 3.0.10 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Wed, 09 Mar 2016 11:38:29 +0000
+
+dde-control-center (3.0.10-2) unstable; urgency=low
+
+  * Rebuild Version 3.0.10 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Wed, 09 Mar 2016 11:07:31 +0000
+
+dde-control-center (3.0.10-1) unstable; urgency=low
+
+  * Autobuild Tag 3.0.10 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 07 Mar 2016 17:01:12 +0000
+
 dde-control-center (3.0.9-3) stable; urgency=low
 
   * Rebuild Version 3.0.9 
