--- a/dde-desktop/debian/changelog
+++ b/dde-desktop/debian/changelog
@@ -1,3 +1,21 @@
+dde-desktop (3.0.6-3) stable; urgency=low
+
+  * Rebuild Version 3.0.6 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 25 Apr 2016 11:20:41 +0000
+
+dde-desktop (3.0.6-2) stable; urgency=low
+
+  * Rebuild Version 3.0.6 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 21 Apr 2016 16:18:36 +0000
+
+dde-desktop (3.0.6-1) stable; urgency=low
+
+  * Autobuild Tag 3.0.6 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 07 Mar 2016 15:48:50 +0000
+
 dde-desktop (3.0.5-1) stable; urgency=low
 
   * Autobuild Tag 3.0.5 
