--- a/dde-session-ui/debian/changelog
+++ b/dde-session-ui/debian/changelog
@@ -1,3 +1,21 @@
+dde-session-ui (3.0.9-3) stable; urgency=low
+
+  * Rebuild Version 3.0.9 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 25 Apr 2016 11:20:29 +0000
+
+dde-session-ui (3.0.9-2) stable; urgency=low
+
+  * Rebuild Version 3.0.9 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 21 Apr 2016 16:16:31 +0000
+
+dde-session-ui (3.0.9-1) stable; urgency=low
+
+  * Autobuild Tag 3.0.9 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 07 Mar 2016 15:48:06 +0000
+
 dde-session-ui (3.0.8-1) stable; urgency=low
 
   * Autobuild Tag 3.0.8 
