--- a/deepin-appstore/debian/changelog
+++ b/deepin-appstore/debian/changelog
@@ -1,3 +1,9 @@
+deepin-appstore (4.0.7-2) stable; urgency=low
+
+  * Rebuild Version 4.0.7 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 21 Apr 2016 16:15:26 +0000
+
 deepin-appstore (4.0.7-1) stable; urgency=low
 
   * Autobuild Tag 4.0.7 
