--- a/deepin-desktop-schemas/debian/changelog
+++ b/deepin-desktop-schemas/debian/changelog
@@ -1,3 +1,9 @@
+deepin-desktop-schemas (3.0.3-2) stable; urgency=low
+
+  * Rebuild Version 3.0.3 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 21 Apr 2016 16:16:58 +0000
+
 deepin-desktop-schemas (3.0.3-1) stable; urgency=low
 
   * Autobuild Tag 3.0.3 
