--- a/deepin-icon-theme/debian/changelog
+++ b/deepin-icon-theme/debian/changelog
@@ -1,3 +1,9 @@
+deepin-icon-theme (15.12.26-2) unstable; urgency=low
+
+  * Rebuild Version 15.12.26 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 21 Apr 2016 16:17:50 +0000
+
 deepin-icon-theme (15.12.26-1) unstable; urgency=low
 
   * Autobuild Tag 15.12.26 
