--- a/deepin-installer/debian/changelog
+++ b/deepin-installer/debian/changelog
@@ -1,3 +1,57 @@
+deepin-installer (1.4.4-4) stable; urgency=low
+
+  * Rebuild Version 1.4.4 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 21 Apr 2016 16:15:15 +0000
+
+deepin-installer (1.4.4-3) stable; urgency=low
+
+  * Rebuild Version 1.4.4 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 21 Apr 2016 09:33:22 +0000
+
+deepin-installer (1.4.4-2) stable; urgency=low
+
+  * Rebuild Version 1.4.4 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Tue, 19 Apr 2016 17:37:43 +0000
+
+deepin-installer (1.4.4-1) stable; urgency=low
+
+  * Autobuild Tag 1.4.4 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 18 Apr 2016 15:32:04 +0000
+
+deepin-installer (1.4.3.1-1) stable; urgency=low
+
+  * Autobuild Tag 1.4.3.1 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Fri, 15 Apr 2016 09:29:08 +0000
+
+deepin-installer (1.4.3-1) stable; urgency=low
+
+  * Autobuild Tag 1.4.3 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 14 Apr 2016 09:15:24 +0000
+
+deepin-installer (1.4.2-1) stable; urgency=low
+
+  * Autobuild Tag 1.4.2 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Tue, 29 Mar 2016 09:50:30 +0000
+
+deepin-installer (1.4.1-1) stable; urgency=low
+
+  * Autobuild Tag 1.4.1 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Sun, 06 Mar 2016 09:46:02 +0000
+
+deepin-installer (1.4.0-1) stable; urgency=low
+
+  * Autobuild Tag 1.4.0 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Sat, 05 Mar 2016 15:31:46 +0000
+
 deepin-installer (1.3.23-1) unstable; urgency=low
 
   * Autobuild Tag 1.3.23 
