--- a/deepin-movie/debian/changelog
+++ b/deepin-movie/debian/changelog
@@ -1,3 +1,15 @@
+deepin-movie (2.2.3-3) stable; urgency=low
+
+  * Rebuild Version 2.2.3 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Wed, 11 May 2016 17:06:16 +0000
+
+deepin-movie (2.2.3-2) stable; urgency=low
+
+  * Rebuild Version 2.2.3 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 21 Apr 2016 16:19:15 +0000
+
 deepin-movie (2.2.3-1) stable; urgency=low
 
   * Autobuild Tag 2.2.3 
