--- a/deepin-music/debian/changelog
+++ b/deepin-music/debian/changelog
@@ -1,3 +1,9 @@
+deepin-music (2.90.0-1) stable; urgency=low
+
+  * Autobuild Tag 2.90.0 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 21 Apr 2016 14:51:38 +0000
+
 deepin-music (2.3.0-1) stable; urgency=low
 
   * Autobuild Tag 2.3.0 
