--- a/deepin-remote-assistance/debian/changelog
+++ b/deepin-remote-assistance/debian/changelog
@@ -1,3 +1,9 @@
+deepin-remote-assistance (1.0.3-2) stable; urgency=low
+
+  * Rebuild Version 1.0.3 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 21 Apr 2016 16:18:19 +0000
+
 deepin-remote-assistance (1.0.3-1) stable; urgency=low
 
   * Autobuild Tag 1.0.3 
