--- a/deepin-terminal/debian/changelog
+++ b/deepin-terminal/debian/changelog
@@ -1,3 +1,9 @@
+deepin-terminal (1.1.4-2) stable; urgency=low
+
+  * Rebuild Version 1.1.4 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 21 Apr 2016 16:18:07 +0000
+
 deepin-terminal (1.1.4-1) stable; urgency=low
 
   * Autobuild Tag 1.1.4 
