--- a/deepin-wm/debian/changelog
+++ b/deepin-wm/debian/changelog
@@ -1,3 +1,9 @@
+deepin-wm (1.0.5-1) stable; urgency=low
+
+  * Autobuild Tag 1.0.5 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 21 Apr 2016 16:19:01 +0000
+
 deepin-wm (1.0.4-1) stable; urgency=low
 
   * Autobuild Tag 1.0.4 
