--- a/go-dlib/debian/changelog
+++ b/go-dlib/debian/changelog
@@ -1,3 +1,9 @@
+go-dlib (0.4.8-3) stable; urgency=low
+
+  * Rebuild Version 0.4.8 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 21 Apr 2016 16:09:31 +0000
+
 go-dlib (0.4.8-2) stable; urgency=low
 
   * Rebuild Version 0.4.8 
