--- a/go-gir-generator/debian/changelog
+++ b/go-gir-generator/debian/changelog
@@ -1,3 +1,9 @@
+go-gir-generator (0.9.2-6) stable; urgency=low
+
+  * Rebuild Version 0.9.2 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 21 Apr 2016 15:54:09 +0000
+
 go-gir-generator (0.9.2-5) stable; urgency=low
 
   * Rebuild Version 0.9.2 
