--- a/deepin-icon-theme/debian/changelog
+++ b/deepin-icon-theme/debian/changelog
@@ -1,3 +1,9 @@
+deepin-icon-theme (15.12.27-1) unstable; urgency=low
+
+  * Autobuild Tag 15.12.27 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 16 May 2016 13:41:41 +0000
+
 deepin-icon-theme (15.12.26-2) unstable; urgency=low
 
   * Rebuild Version 15.12.26 
