--- a/deepin-screenshot/debian/changelog
+++ b/deepin-screenshot/debian/changelog
@@ -1,3 +1,9 @@
+deepin-screenshot (3.1.8-1) stable; urgency=low
+
+  * Autobuild Tag 3.1.8 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Fri, 20 May 2016 15:45:10 +0000
+
 deepin-screenshot (3.1.7-1) stable; urgency=low
 
   * Autobuild Tag 3.1.7 
