--- a/lastore-daemon/debian/changelog
+++ b/lastore-daemon/debian/changelog
@@ -1,3 +1,27 @@
+lastore-daemon (0.9.18.4-4) stable; urgency=low
+
+  * Rebuild Version 0.9.18.4 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Tue, 17 May 2016 10:17:40 +0000
+
+lastore-daemon (0.9.18.4-3) stable; urgency=low
+
+  * Rebuild Version 0.9.18.4 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Tue, 17 May 2016 10:09:34 +0000
+
+lastore-daemon (0.9.18.4-2) stable; urgency=low
+
+  * Rebuild Version 0.9.18.4 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Tue, 17 May 2016 09:50:05 +0000
+
+lastore-daemon (0.9.18.4-1) stable; urgency=low
+
+  * Autobuild Tag 0.9.18.4 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Tue, 17 May 2016 09:32:30 +0000
+
 lastore-daemon (0.9.18.3-3) stable; urgency=low
 
   * Rebuild Version 0.9.18.3 
